fix(ix/choice): scroll on overflow

--- a/client/src/lit/interactive-example/index.scss
+++ b/client/src/lit/interactive-example/index.scss
@@ -211,6 +211,7 @@ tab-wrapper {
     display: flex;
     flex-direction: column;
     grid-area: choice;
+    overflow: scroll;
     padding: 1rem;
     padding-right: 0;
     row-gap: 0.4rem;
